--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "dev": "ts-node-dev --watch './src/**/*.ts' --transpile-only --poll --exit-child --respawn src/server.ts",
+    "build": "tsc -p ."
   },
   "keywords": [],
   "author": "",
@@ -17,11 +19,15 @@
     "jsonwebtoken": "^9.0.2",
     "pg": "^8.13.1",
     "prisma": "^5.21.1",
-    "tsyringe": "^4.8.0"
+    "reflect-metadata": "^0.2.2",
+    "ts-node-dev": "^2.0.0",
+    "tsyringe": "^4.8.0",
+    "typescript": "^5.6.3"
   },
   "devDependencies": {
     "@types/cors": "^2.8.17",
-    "@types/express": "^5.0.0",
+    "@types/express": "^4.17.21",
+    "@types/express-serve-static-core": "^4.19.6",
     "@types/jsonwebtoken": "^9.0.7"
   }
 }
