--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@prisma/client": "^5.21.1",
     "bcrypt": "^5.1.1",
     "cors": "^2.8.5",
+    "dotenv": "^16.4.5",
     "express": "^4.21.1",
     "jsonwebtoken": "^9.0.2",
     "pg": "^8.13.1",
@@ -22,7 +23,8 @@
     "reflect-metadata": "^0.2.2",
     "ts-node-dev": "^2.0.0",
     "tsyringe": "^4.8.0",
-    "typescript": "^5.6.3"
+    "typescript": "^5.6.3",
+    "zod": "^3.23.8"
   },
   "devDependencies": {
     "@types/bcrypt": "^5.0.2",
