--- a/package.json
+++ b/package.json
@@ -17,9 +17,11 @@
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.21.1",
+    "ioredis": "^5.4.1",
     "jsonwebtoken": "^9.0.2",
     "pg": "^8.13.1",
     "prisma": "^5.21.1",
+    "redis": "^4.7.0",
     "reflect-metadata": "^0.2.2",
     "ts-node-dev": "^2.0.0",
     "tsyringe": "^4.8.0",
